--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+h2 {
+    font-size: 1.5em;
+}
+
 @media (max-width: 768px) {
     h2 {
-        font-size: 0.9em;
         margin-top: 4%;
     }
 
